0024166: Unable to create file with "Save" menu of voxeldemo Qt sample Turning on the light to display the shapes of the sample.